--- a/src/style/Books.module.css
+++ b/src/style/Books.module.css
@@ -1,3 +1,14 @@
-.sectionContainer {
-  background-color: #f5f6fa;
+.list {
+  padding: 0;
+}
+
+.listItem {
+  padding: 2rem 1.7rem;
+  list-style: none;
+  margin-bottom: 1rem;
+  background-color: white;
+}
+
+li:last-child {
+  margin-bottom: 0;
 }
