--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: var(--bg);
+  color: var(--blackTxt);
 }
 
 .headerContainer {
