--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ html {
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: var(--blackTxt);
+  color: var(--grayTxt);
 }
 
 .headerContainer {
